--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -110,3 +110,17 @@ footer {
     right: 40px;
     transform: translateY(-50%);
 }
+
+.table-calendar th {
+    padding: .5em;
+}
+
+.table-top-right {
+    margin-top: -1em;
+    margin-right: -0.5em;
+}
+
+.table-sessions {
+    margin: auto -0.5em -0.5em;
+    min-height: 4em;
+}
