--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -144,3 +144,61 @@ footer {
         display: none;
     }
 }
+
+.image-box {
+    position: relative;
+    width: 100%;
+    padding-bottom: 150%;
+    height: 0;
+}
+   
+.image-box img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+    object-position: center;
+}
+
+.modal-character-sheet {
+    max-width: 100%;
+    margin: 0;
+    max-height: 100%;
+    height: 100%;
+}
+
+.modal-character-sheet .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+}
+
+.modal-character-sheet .modal-body {
+    padding:0;
+    width: 100%;
+    height: 100%;
+}
+
+.modal-character-sheet iframe {
+    position: absolute; 
+    width: 100%;
+    height: 100%;
+}
+
+.character-description {
+    padding: 1em;
+    font-style: italic;
+}
+
+.character-description br {
+    margin-bottom: 15px;
+}
+
+.character-image {
+    width: 20%;
+    float: right;
+}
+
+.max-width {
+    width: 100%;
+}
