--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -195,10 +195,21 @@ footer {
 }
 
 .character-image {
-    width: 20%;
+    width: 25%;
     float: right;
+    margin-left: 2em;
+}
+
+@media screen and (max-width: 720px) {
+    .character-image {
+        width: 33%;
+    }
 }
 
 .max-width {
     width: 100%;
+}
+
+.emoji {
+    font-style: normal !important;
 }
