--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -122,7 +122,7 @@ footer {
 
 .table-sessions {
     margin: auto -0.5em -0.5em;
-    min-height: 4em;
+    min-height: 5em;
 }
 
 .footer-links .separator {
@@ -219,4 +219,28 @@ footer {
     width: 25%;
     float: left;
     margin-right: 1em;
+}
+
+.card-session {
+    background-size: cover;
+    background-position: center;
+}
+
+.session-info {
+    background: rgba(255, 255, 255, 0.75);
+    border-radius: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+}
+
+.day-row {
+    background-size: cover;
+    background-position: center;
+}
+
+.day-row-number {
+    background: rgba(255, 255, 255, 0.75);
+    border-radius: 50%;
+    padding: 2px;
 }
