--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -226,8 +226,14 @@ footer {
     background-position: center;
 }
 
+.session-flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
 .session-info {
-    background: rgba(255, 255, 255, 0.75);
+    background: rgba(255, 255, 255, 0.6);
     border-radius: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
