--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -168,7 +168,7 @@ footer {
 .image-box.image-box-circle img {
     border-radius: 50%
 }
-   
+
 .image-box img {
     width: 100%;
     height: 100%;
@@ -197,7 +197,7 @@ footer {
 }
 
 .modal-character-sheet iframe {
-    position: absolute; 
+    position: absolute;
     width: 100%;
     height: 100%;
 }
@@ -399,4 +399,53 @@ footer {
 a.link-dotted:hover {
     color: inherit;
     text-decoration: none;
+}
+
+.pt-box {
+    border: 1px solid black;
+    border-radius: 0.5em;
+    padding-left: 1em;
+    padding-right: 1em;
+    background: #FFD700;
+    margin-left: 1em;
+}
+
+.pt-box i {
+    padding-right: .5em;
+}
+
+.pt-box strong {
+    font-size: 1.5em;
+}
+
+.merchant-ends {
+    font-weight: bold;
+    font-size: 1.5em;
+    background: #dc3545;
+    color: white;
+    border-radius: 99999em;
+}
+
+.btn-buy {
+    width: 4.25em;
+}
+
+.bg-rarity-common {
+    background: lightgray;
+}
+
+.bg-rarity-uncommon {
+    background: limegreen;
+}
+
+.bg-rarity-rare {
+    background: skyblue;
+}
+
+.bg-rarity-very-rare {
+    background: violet;
+}
+
+.bg-rarity-legendary {
+    background: orange;
 }
