--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -418,11 +418,7 @@ a.link-dotted:hover {
     font-size: 1.5em;
 }
 
-.merchant-ends {
-    font-weight: bold;
-    font-size: 1.5em;
-    background: #dc3545;
-    color: white;
+.round-border {
     border-radius: 99999em;
 }
 
@@ -448,4 +444,22 @@ a.link-dotted:hover {
 
 .bg-rarity-legendary {
     background: orange;
+}
+
+.merchant-ending {
+    border-color: red;
+    transition: all 1s;
+    animation: glow 2s infinite linear;
+}
+
+@keyframes glow {
+    0% {
+        box-shadow: inset 0 0 5px red;
+    }
+    50% {
+        box-shadow: inset 0 0 20px red;
+    }
+    100% {
+        box-shadow: inset 0 0 5px red;
+    }
 }
