--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -502,3 +502,24 @@ footer {
 .buttons-wsetting-home button.active:hover::before {
     opacity: 0.15;
 }
+
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu > .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+}
+
+.dropdown-submenu:hover > .dropdown-menu {
+  display: block;
+}
+
+@media (min-width: 576px) {
+  .dropdown-submenu > a.dropdown-toggle::after {
+    transform: rotate(-90deg);
+    margin-left: 0.5em;
+  }
+}
